"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-08-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-05:
	  hacknet: enabled cached assoc_uid for transistors to that
		indicies are not generated on-the-fly during printing.
	  Updated 1 test case.


	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-04:
	  hacknet: reorder rule/macro process of subcircuits so that
		non-local-subcircuit rules are processed first, then
		whole subckts one-by-one, so that (eventually) grouped
		transistors may be enumerated contiguouly by subcircuit.


2011-08-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-03:
	  hacknet: added option to emit_node_terminals to print out
		graph representation of node connections.
		Output dump format is only preliminary now.
	  simplified some function prototypes no longer needing footprint.


2011-08-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-02:
	  hacknet: enabled computing node terminal graph information,
		but not checked or printed yet, doesn't crash anything.


	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-01:
	  Branch for implementing automatic precharge invariants
		in hacprsim.  Strategy: use hacknet to produce graphical
		representation of netlist, and derive expressions from there,
		because prsim only has tree representations.
	  hacknet: add option to suppress printing of spice netlist.
		Added/updated test cases.


2011-08-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-85:
	  vpi-prsim: fixed uncaught channel exception causing VCS to 
		crash, wrapped call to __advance_prsim in a catch-all
		__advance_prsim_nothrow that calls vpi_finish().
	  Was not able to reproduce with small targeted test case, 